[package]
name = "harvester-dns-controller"
version = "0.1.0"
edition = "2021"
description = "Kubernetes controller that syncs Harvester VirtualMachineNetworkConfig DNS entries to a MikroTik RouterOS DNS server"
license = "Apache-2.0"

[[bin]]
name = "harvester-dns-controller"
path = "src/main.rs"

[dependencies]
kube = { version = "0.99", features = ["runtime", "derive"] }
kube-runtime = "0.99.0"
k8s-openapi = { version = "0.24.0", features = ["v1_30"] }
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
thiserror = "1"
anyhow = "1"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
envy = "0.4"
